--- a/11ty/resume.njk
+++ b/11ty/resume.njk
@@ -5,7 +5,7 @@ layout: layouts/base.njk
 
 {% import 'resume/experience.njk' as experience %}
 
-<section>
+<section class="prose">
   <header>
     <h2>Skills & Technologies</h2>
   </header>
@@ -28,7 +28,7 @@ layout: layouts/base.njk
   </ul>
 </section>
 
-<section>
+<section class="prose">
   <header>
     <h2>Work</h2>
   </header>
@@ -37,7 +37,7 @@ layout: layouts/base.njk
   {% endfor %}
 </section>
 
-<section>
+<section class="prose">
   <header>
     <h2>Education</h2>
   </header>
@@ -46,7 +46,7 @@ layout: layouts/base.njk
   {% endfor %}
 </section>
 
-<section>
+<section class="prose">
   <header>
     <h2>Activities & Interests</h2>
     <ul>
