Wire up Goodreads book shelves

--- a/11ty/css/tailwind.css
+++ b/11ty/css/tailwind.css
@@ -13,3 +13,13 @@ a {
 .tooltip {
   z-index: 10000000;
 }
+
+.bookshelf {
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  column-gap: 1vw;
+  margin: 0 1vw 1vw;
+  margin-left: 0;
+  text-align: center;
+}
