--- a/11ty/_includes/layouts/base.njk
+++ b/11ty/_includes/layouts/base.njk
@@ -5,6 +5,7 @@
     <title>{{ title or metadata.title }}</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{ latestFeeling.emoji }}</text></svg>" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true" />
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin="true" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
   </head>
@@ -19,7 +20,7 @@
         {% endfor %}
       </nav>
     </header>
-    <main>
+    <main class="w-full md:max-w-3xl mx-auto pt-20 sm:pt-12 mt-6 print:mt-0 print:pt-0">
       {{ content | safe }}
     </main>
     <footer class="footer">
