--- a/11ty/index.njk
+++ b/11ty/index.njk
@@ -77,6 +77,7 @@ layout: layouts/base.njk
     GitHub contribution calendars are not a good indicator of whether or not someone is a good developer, but they are
     very pretty.
   </p>
+  {% cachedImage githubActivity, "eligundry's GitHub contribution calendar" %}
 </section>
 
 <section class="reading paper">
