Get collections working + rename files to match slugs

--- a/11ty/_includes/layouts/base.njk
+++ b/11ty/_includes/layouts/base.njk
@@ -51,7 +51,7 @@
           <h3 class="footer-title">Social</h3>
           <div>
             {% for link in social %}
-              <a href="{{ link.href }}" class="btn btn-primary" title="{{ link.label }}">
+              <a href="{{ link.href }}" class="btn btn-square btn-primary" title="{{ link.label }}">
                 <i class="{{ link.icon }} text-4xl"></i>
               </a>
             {% endfor %}
