--- a/11ty/_includes/layouts/base.njk
+++ b/11ty/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" itemscope itemtype="https://schema.org/Person" itemid="#eli-gundry">
+<html lang="en" itemscope itemtype="https://schema.org/Person" itemid="#eli-gundry" data-theme="light">
   <head>
     <meta charset="utf-8">
     {% if title %}
