--- a/11ty/_includes/layouts/base.njk
+++ b/11ty/_includes/layouts/base.njk
@@ -10,6 +10,8 @@
     {% if description %}
       <meta name="description" content="{{ description }}" />
     {% endif %}
+    <link rel="alternate" type="application/rss+xml" title="Eli Gundry's Blog" href="/blog.rss" />
+    <link rel="alternate" type="application/rss+xml" title="Eli Gundry's Feelings" href="/feelings.rss">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>{{ latestFeeling.emoji }}</text></svg>" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true" />
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin="true" />
