CSS bundle size tweaks

--- a/11ty/_includes/layouts/post.njk
+++ b/11ty/_includes/layouts/post.njk
@@ -1,7 +1,7 @@
 {% extends "./base.njk" %}
 
 {% block mainContent %}
-  <article class="paper" itemscope itemtype="https://schema.org/BlogPosting">
+  <article class="paper prose" itemscope itemtype="https://schema.org/BlogPosting">
     <link itemprop="author publisher" href="#eli-gundry">
     <header>
       <h1 itemprop="name headline">{{ title }}</h1>
