--- a/11ty/blog.njk
+++ b/11ty/blog.njk
@@ -4,7 +4,7 @@ description: Thoughts, tutorials, musings, album reviews and everything in betwe
 layout: layouts/base.njk
 ---
 
-<div class="paper">
+<div class="paper prose">
   {% for post in collections.post | reverse %}
     <article>
       <h1 itemprop="name headline">
