--- a/11ty/index.njk
+++ b/11ty/index.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 ---
 
-<section class="intro paper">
+<section class="intro paper prose">
   <h2>Glad To Meet You!</h2>
   <p>My name is Eli I only really write in lists, so here's my deal.</p>
   <ul>
@@ -33,7 +33,7 @@ layout: layouts/base.njk
   </ul>
 </section>
 
-<section class="feeling paper">
+<section class="feeling paper prose">
   <h2>How I'm Feeling</h2>
   <p>
     A while ago, I decided to start journaling my feelings. Being a software engineer,
@@ -66,7 +66,7 @@ layout: layouts/base.njk
   </article>
 </section>
 
-<section class="coding paper">
+<section class="coding paper prose">
   <h2>Do You Code?</h2>
   <p>
     I make a living developing web applications. I jump all around the stack and will do whatever it takes to ship. Need
@@ -80,7 +80,7 @@ layout: layouts/base.njk
   {% cachedImage githubActivity, "eligundry's GitHub contribution calendar" %}
 </section>
 
-<section class="reading paper">
+<section class="reading paper prose">
   <h2>What I'm Reading</h2>
   <p>
     I wish I read more, but there are only so many hours in the day. These are the books that I'm reading right now. You
@@ -98,7 +98,7 @@ layout: layouts/base.njk
   </div>
 </section>
 
-<section class="listening paper">
+<section class="listening paper prose">
   <h2>What I'm Listening To</h2>
   <p>
     I listen to way too much music and I love to listen to full albums. I mainly listen to hip hop, indie rock and <a href="/blog/icymi-glocca-morra-just-married"><abbr title="Ask me about the fun 5th wave emo bands I love">emo</abbr></a>.
