--- a/11ty/css/tailwind.css
+++ b/11ty/css/tailwind.css
@@ -1,14 +1,14 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-@import "highlight.js/styles/base16/default-dark";
+@import "./code.css";
 
 a {
   @apply link link-primary link-hover;
 }
 
 .paper {
-  @apply prose max-w-none mb-4 drop-shadow-xl;
+  @apply max-w-none mb-4 drop-shadow-xl;
 }
 
 .prose {
