--- a/11ty/talks.njk
+++ b/11ty/talks.njk
@@ -4,7 +4,7 @@ description: Talks that I have given at meetups and conferences.
 layout: layouts/base.njk
 ---
 
-<div class="paper">
+<div class="paper prose">
   {% for talk in collections.talk | reverse %}
     <article>
       <h1 itemprop="name headline">
