Add theme toggle component

--- a/11ty/src/_includes/header.njk
+++ b/11ty/src/_includes/header.njk
@@ -12,6 +12,9 @@
             </a>
           </li>
         {% endfor %}
+        <li>
+          <is-land autoinit="preact" import="/components/ThemeChanger.js"></is-land>
+        </li>
       </ul>
     </nav>
   </div>
