--- a/11ty/src/resume.njk
+++ b/11ty/src/resume.njk
@@ -7,7 +7,7 @@ layout: layouts/base.njk
 
 <div class="paper">
   <section class="prose">
-    <header>
+    <header class="[&>h2]:mt-0">
       <h2>Skills & Technologies</h2>
     </header>
     <ul>
