Get the header & footer looking better
Add netlify.toml

--- a/11ty/src/_includes/layouts/base.njk
+++ b/11ty/src/_includes/layouts/base.njk
@@ -26,7 +26,7 @@
       {% include 'header.njk' %}
     {% endblock %}
 
-    <main class="container mx-auto print:mt-0 print:pt-0">
+    <main class="container mx-auto mt-24 print:mt-0 print:pt-0">
       {% block mainContent %}
         {{ content | safe }}
       {% endblock %}
