--- a/11ty/src/_includes/footer.njk
+++ b/11ty/src/_includes/footer.njk
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer bg-base-100 py-4 shadow">
   <div class="container mx-auto flex flex-row">
     <div>
       <h3 class="footer-title">About</h3>
