--- a/11ty/src/_includes/header.njk
+++ b/11ty/src/_includes/header.njk
@@ -1,4 +1,4 @@
-<header class="navbar">
+<header class="navbar bg-base-100 shadow fixed top-0 z-50">
   <div class="container mx-auto flex flex-wrap">
     <div class="flex-1">
       <a href="/" itemprop="sameAs" class="btn btn-ghost normal-case text-xl site-name">Eli Gundry</a>
