--- a/11ty/src/css/tailwind.css
+++ b/11ty/src/css/tailwind.css
@@ -9,7 +9,7 @@ a {
 }
 
 .paper {
-  @apply max-w-none mb-4 drop-shadow-xl;
+  @apply max-w-none mb-4 drop-shadow-xl bg-base-100/90 p-4 rounded-lg;
 }
 
 .prose {
