Add comments to blog posts

--- a/11ty/src/_includes/layouts/base.njk
+++ b/11ty/src/_includes/layouts/base.njk
@@ -37,5 +37,6 @@
 
     <script src="/js/is-land.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
+    {% block scripts %}{% endblock %}
   </body>
 </html>
