Smol lil comments tweak

--- a/11ty/src/_includes/layouts/post.njk
+++ b/11ty/src/_includes/layouts/post.njk
@@ -12,7 +12,7 @@
     </main>
     <is-land on:visible>
       <hr class="my-2" />
-      <aside class="print:hidden" id="utterances"></aside>
+      <aside class="print:hidden min-h-[269px]" id="utterances"></aside>
       <script type="module/island">
         const theme = document.querySelector('html').getAttribute('data-theme')
         const utterancesElm = document.getElementById('utterances')
