--- a/11ty/src/_includes/layouts/base.njk
+++ b/11ty/src/_includes/layouts/base.njk
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin="true" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+    {% include 'tracking.njk' %}
     {% block head %}{% endblock %}
   </head>
   <body>
