Add a YouTube shortcode

--- a/11ty/src/index.njk
+++ b/11ty/src/index.njk
@@ -84,7 +84,7 @@ layout: layouts/base.njk
     GitHub contribution calendars are not a good indicator of whether or not someone is a good developer, but they are
     very pretty.
   </p>
-  {% cachedImage githubActivity, "eligundry's GitHub contribution calendar" %}
+  {% cachedImage githubActivity, "eligundry's GitHub contribution calendar", "", false %}
 </section>
 
 <section class="reading paper prose">
