Make the Spotify embed have a responsive height

--- a/11ty/src/_includes/header.njk
+++ b/11ty/src/_includes/header.njk
@@ -15,7 +15,7 @@
         <li>
           <is-land>
             <label class="swap swap-flip">
-              <input type="checkbox" name="theme-toggle" id="theme-toggle" />
+              <input type="checkbox" id="theme-toggle" />
               <div class="swap-on">🌚</div>
               <div class="swap-off">🌞</div>
             </label>
