Start fleshing out header and footer

--- a/11ty/src/_includes/footer.njk
+++ b/11ty/src/_includes/footer.njk
@@ -1,9 +1,13 @@
-<footer class="footer bg-base-100 py-4 shadow">
-  <div class="container mx-auto flex flex-row">
+<footer class="footer bg-base-100 px-4 sm:px-0 py-4 shadow">
+  <div class="container mx-auto flex flex-col sm:flex-row">
     <div>
       <h3 class="footer-title">About</h3>
       <p>
-        Eli Gundry is a full stack web developer that loves JavaScript, devops and web standards.
+        Eli Gundry is a full stack web developer that loves JavaScript, devops and web standards. When he isn't coding,
+        he's {% emojiText "👨‍🍳", "chef emoji cause I'm cooking", "cooking up something mean in the kitchen" %},
+        {% emojiText "🎾", "tennis ball", "playing tennis" %} or {% emojiText "🐈‍⬛🐈", "my cats!", "annoying his cats" %}.
+        He is also a <a href="/web0.html">{% emojiText "✳️", "feel the html.energy", "web0 evangelist" %}</a> and thinks
+        everyone can benefit from writing some HTML.
       </p>
     </div>
     <div>
