--- a/11ty/src/_includes/header.njk
+++ b/11ty/src/_includes/header.njk
@@ -1,17 +1,21 @@
-<header class="navbar bg-base-100 shadow fixed top-0 z-50">
+{% set navlinks %}
+  {% for link in topNav %}
+    <li>
+      <a href="{{ link.href }}"{% if page.url == link.href %} aria-current="page" class="active"{% endif %}>
+        {% emojiText link.emoji, link.emojiLabel, link.name %}
+      </a>
+    </li>
+  {% endfor %}
+{% endset %}
+
+<header class="navbar bg-base-100 shadow fixed top-0 z-50 px-4 sm:px-0">
   <div class="container mx-auto flex flex-wrap">
     <div class="flex-1">
       <a href="/" itemprop="sameAs" class="btn btn-ghost normal-case text-xl site-name">Eli Gundry</a>
     </div>
-    <nav class="flex-none">
+    <nav class="flex-none hidden sm:flex">
       <ul class="menu menu-horizontal p-0">
-        {% for link in topNav %}
-          <li>
-            <a href="{{ link.href }}"{% if page.url == link.href %} aria-current="page"{% endif %}>
-              {% emojiText link.emoji, link.emojiLabel, link.name %}
-            </a>
-          </li>
-        {% endfor %}
+        {{ navlinks | safe }}
         <li>
           <is-land>
             <label class="swap swap-flip">
@@ -27,5 +31,18 @@
         </li>
       </ul>
     </nav>
+    <div class="flex justify-end flex-none">
+      <nav class="navbar-end sm:hidden">
+        <div class="dropdown dropdown-end">
+          <label class="swap swap-flip btn btn-ghost btn-circle" tabindex="0">
+            <div class="swap-on">🙅‍♂️</div>
+            <div class="swap-off">🍔</div>
+          </label>
+          <ul tabindex="0" class="menu menu-compact dropdown-content bg-base-100 rounded-box w-full">
+            {{ navlinks | safe }}
+          </ul>
+        </div>
+      </nav>
+    </div>
   </div>
 </header>
