--- a/11ty/src/_includes/footer.njk
+++ b/11ty/src/_includes/footer.njk
@@ -1,6 +1,6 @@
-<footer class="footer bg-base-100 px-4 sm:px-0 py-4 shadow">
+<footer class="footer bg-base-100 px-4 sm:px-0 py-8 shadow">
   <div class="container mx-auto flex flex-col sm:flex-row">
-    <div>
+    <div class="w-2/3">
       <h3 class="footer-title">About</h3>
       <p>
         Eli Gundry is a full stack web developer that loves JavaScript, devops and web standards. When he isn't coding,
@@ -10,7 +10,7 @@
         everyone can benefit from writing some HTML.
       </p>
     </div>
-    <div>
+    <div class="w-1/3">
       <h3 class="footer-title">Social</h3>
       <div>
         {% for link in social %}
