--- a/11ty/src/_includes/header.njk
+++ b/11ty/src/_includes/header.njk
@@ -1,7 +1,7 @@
 {% set navlinks %}
   {% for link in topNav %}
     <li>
-      <a href="{{ link.href }}"{% if page.url == link.href %} aria-current="page" class="active"{% endif %}>
+      <a href="{{ link.href }}"{% if page.url == link.href %} aria-current="page"{% endif %}>
         {% emojiText link.emoji, link.emojiLabel, link.name %}
       </a>
     </li>
